# SI_lab_2

./: CMakeLists.txt  IValue.h  IVariable.h  main.cpp
components/header/: Color.h  Domain.h  Node.h
components/interface/: IDomain.h  IValue.h  IVariable.h
components/source/: Color.cpp  Domain.cpp  Node.cpp
constraints/header/: BinaryConstraint.h  UnaryConstraint.h
constraints/interface/: IBinaryConstraint.h  ISingleVariableConstraint.h  IUnaryConstraint.h
constraints/source/: BinaryConstraint.cpp  UnaryConstraint.cpp
problems/header/: HarmoniousGraph.h
problems/interface/: IProblem.h
problems/source/: HarmoniousGraph.cpp
solution/header/: Backtracking.h  ConstraintSatisfactionProblem.h  ForwardChecking.h  Solution.h
solution/interface/: IConstraintSatisfactionProblem.h  ISolution.h
solution/source/: Backtracking.cpp  ConstraintSatisfactionProblem.cpp  ForwardChecking.cpp  Solution.cpp
src/: CMakeLists.txt
src/accessors/header/: LeastCrossingOccurrenceValueGetter.h  LeastUsedValueGetter.cpp  LeastUsedValueGetter.h  MostConstrainedVariableGetter.cpp  MostConstrainedVariableGetter.h  MostFilledCrossingVariableGetter.h  NextValueGetter.h  NextVariableGetter.h
src/accessors/interface/: IValueGetter.h  IVariableGetter.h
src/accessors/source/: LeastCrossingOccurrenceValueGetter.cpp  LeastUsedValueGetter.cpp  MostConstrainedVariableGetter.cpp  MostFilledCrossingVariableGetter.cpp  NextValueGetter.cpp  NextVariableGetter.cpp
src/components/header/: Color.h  Domain.h  MainDomain.h  Node.h  Number.h
src/components/interface/: IDomain.h  IValue.h  IVariable.h
src/components/source/: Color.cpp  Domain.cpp  MainDomain.cpp  Node.cpp  Number.cpp
src/constraints/header/: BinaryGameConstraint.h  BinaryGameConstraintChecker.h  Column.h  Connection.h  ConnectionConstraint.h  EqualSplitConstraint.h  ExistingRowConstraint.h  HarmoniousGraphConstraint.h  HarmoniousGraphConstraintChecker.h  NeighbourConstraint.h  PairConstraint.h  Row.h  UnaryConstraint.h
src/constraints/interface/: IBinaryConstraint.h  IConnection.h  IConstraint.h  IConstraintChecker.h  IRow.h  IUnaryConstraint.h
src/constraints/source/: BinaryGameConstraint.cpp  BinaryGameConstraintChecker.cpp  Column.cpp  Connection.cpp  ConnectionConstraint.cpp  EqualSplitConstraint.cpp  ExistingRowConstraint.cpp  HarmoniousGraphConstraint.cpp  HarmoniousGraphConstraintChecker.cpp  NeighbourConstraint.cpp  PairConstraint.cpp  Row.cpp
src/factories/header/: BinaryGameFactory.cpp  BinaryGameFactory.h  CSPFactory.h  HarmoniousGraphFactory.h
src/factories/interface/: ICSPFactory.h  IProblemFactory.h
src/factories/source/: CSPFactory.cpp  HarmoniousGraphFactory.cpp
src/problems/header/: BinaryGame.h  HarmoniousGraph.h
src/problems/interface/: IProblem.h
src/problems/source/: BinaryGame.cpp  HarmoniousGraph.cpp
src/solution/header/: Backtracking.h  CSPFactory.h  ForwardChecking.h  Menu.h  Solution.h
src/solution/interface/: ICSPFactory.h  IConstraintSatisfactionProblem.h  IMenu.h  ISolution.h
src/solution/source/: Backtracking.cpp  CSPFactory.cpp  ForwardChecking.cpp  Menu.cpp  Solution.cpp
tests/: CMakeLists.txt  gtest.cpp
tests/tests/accessors/: LeastCrossingOccurrenceValueGetterTestSuite.cpp  LeastUsedValueGetterTestSuite.cpp  MostConstrainedVariableGetterTestSuite.cpp  MostFilledCrossingVariableGetterTestSuite.cpp  NextValueGetterTestSuite.cpp  NextVariableGetterTestSuite.cpp
tests/tests/components/: ColorTestSuite.cpp  ColorTests.cpp  DomainTestSuite.cpp  NodeTestSuite.cpp
tests/tests/constraints/: BinaryGameConstraintTestSuite.cpp  ConnectionConstraintTestSuite.cpp  ConnectionTestSuite.cpp  EqualSplitConstraintTestSuite.cpp  ExistingRowConstraintTestSuite.cpp  HarmoniousGraphConstraintTestSuite.cpp  NeighbourConstraintTestSuite.cpp  PairConstraintTestSuite.cpp
